Add shipping to hostedpage

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "rkfl/rocketfuel",
+    "name": "user/rocketfuel",
     "description": "Pay with Rocketfuel",
     "authors": [
         {
